# Offcut-DJ

./: .gitattributes  .gitignore  AUDIT_AND_COMPLETION_PLAN.md  BRAND_NATIVE_PLAN.md  DJOID_FEATURES.md  DJ_SOFTWARE_AUDIT.md  LEXICON_FEATURES.md  MOBILE_COMPANION_PLAN.md  MOBILE_ROADMAP.md  PACKAGING.md  PERFORMANCE_FEATURES_PLAN.md  PROLINK_B2B_PLAN.md  SET_HISTORY_PLAN.md  SET_HISTORY_TAB_PLAN.md  TASKS.md  V2_PHASE1_FX_PLAN.md  V2_PLANNING.md  V2_ROADMAP.md  electron-builder.cjs  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts
.claude/: settings.json
.claude/skills/run-offcut/: SKILL.md  driver.sh
.github/workflows/: release.yml  stems-pack.yml
apps/mobile/: App.tsx  README.md  app.json  global.d.ts  package-lock.json  package.json
apps/mobile/src/: Artwork.tsx  BatchEditBar.tsx  DeckWaveform.tsx  LibraryScreen.tsx  OverviewWaveform.tsx  PlaylistScreen.tsx  PlaylistsScreen.tsx  SmartPlaylistEditor.tsx  SyncScreen.tsx  TrackEditor.tsx  TrackScreen.tsx  TransportControls.tsx  Waveform.tsx  edits.ts  offline.ts  (+9 more)
native/audio-engine/: Cargo.toml  README.md  build.rs
native/audio-engine/src/: deck.rs  decoder.rs  eq.rs  filter.rs  lib.rs  output.rs  recorder.rs  ring.rs  signalsmith.rs  signalsmith_wrapper.cpp  tap.rs
resources/: icon.icns
resources/release/: HOW-TO-OPEN-Windows.txt  HOW-TO-OPEN-macOS.txt
scripts/: build-demucs-pack.sh  build-mac-x64.sh  compile-rekordbox-ksy.cjs  copy-engine.js  dump-rekordbox-usb.cjs  export-beat-this.py  generate-icons.py  inspect-engine-db.cjs  make-empty-pdb.cjs  mint-licence.mjs  rebuild-sqlcipher.js  test-add-track-to-usb.cjs  test-cipher.js  test-sqlcipher.js  test-write-anlz.cjs  test-write-playlist.cjs  test-write-track.cjs
src/main/: ffmpeg.ts  index.ts  licence.ts  migrate-userdata.ts  settings.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/shared/: types.ts
test/shims/: better-sqlite3.ts
tools/: demucs_entry.py
(+223 files in other folders)
